# mcp-marl-cop-thief

./: .env-example  .gitignore  Dockerfile  README.md  pyproject.toml
config/: logging_config.json  rate_limits.json  rl.json  setup.json  setup_2x2.json  setup_3x3.json  submission.json
docs/: BONUS.md  DEPLOY.md  INTER_GROUP_TREATY_SPEC.md  PLAN.md  PRD.md  PRD_gatekeeper.md  PRD_gmail_oauth.md  PRD_nl_protocol.md  PRD_rl_qtable.md  PRD_token_budget.md  RULES_AND_AGREEMENTS.md  STRATEGY.md  TODO.md
src/cop_thief/: __init__.py  app.py  challenge.py  constants.py  diagnostic_runner.py  main.py  report.py  run_match.py  run_train.py  serve.py
src/cop_thief/auth/: __init__.py  gmail_reporter.py  oauth_flow.py
src/cop_thief/config/: __init__.py  aux_models.py  base_model.py  config_manager.py  env_loader.py  manager.py  models.py  rate_limit_models.py  rate_limits.py  rl_config.py  setup_models.py  submission.py  version_guard.py
src/cop_thief/domain/: __init__.py  action.py  agent.py  board_state.py  constants.py  geometry.py  grid.py  move_language.py  scoring.py  state.py  turn_advisor.py
src/cop_thief/domain/agents/: __init__.py  base_agent.py  cop_agent.py  thief_agent.py
src/cop_thief/domain/nl/: __init__.py  belief.py  encoder.py  parser.py
src/cop_thief/domain/reporting/: __init__.py  agreement.py  base_report.py  bonus_report.py  internal_report.py
src/cop_thief/domain/rules/: __init__.py  barrier_mixin.py  capture_mixin.py  movement_mixin.py  rules_engine.py  turn_mixin.py
src/cop_thief/domain/strategy/: __init__.py  base_strategy.py  belief_strategy.py  evaluation.py  features.py  heuristic.py  heuristic_strategy.py  minimax.py  opponent.py  qlearning_strategy.py  qlearning_trainer.py  qtable.py  roster.py  selfplay.py
src/cop_thief/gui/: __init__.py  app.py  board_view.py  window.py
src/cop_thief/infra/: __init__.py  errors.py  gatekeeper.py  llm_client.py  logger.py  rate_limiter.py  retry.py  token_tracker.py
src/cop_thief/infra/gatekeeper/: __init__.py  engine.py  exceptions.py  factory.py  payload_builder.py  token_tracker.py
src/cop_thief/infra/network/: __init__.py  dual_mcp_host.py  move_client.py  switchboard.py
src/cop_thief/orchestrator/: __init__.py  bonus_series.py  challenge_runner.py  controller.py  encoder.py  exceptions.py  firewall.py  game_loop.py  match.py  mcp_client.py  models.py  parser.py  reconcile.py  remote_game.py  series.py  treaty_runner.py
src/cop_thief/reporting/: __init__.py  archive.py  bonus_report.py  guard.py  logger.py  reporter.py
src/cop_thief/sdk/: __init__.py  exceptions.py  facade.py  sdk.py  services.py  warfare.py
src/cop_thief/servers/: __init__.py  auth.py  base_server.py  cop_server.py  inbound_observer.py  run_server.py  session.py  thief_server.py
src/cop_thief/servers/tools/: move_tool.py  strategy_resolver.py
src/cop_thief/ui/: __init__.py  broadcast.py  node_state.py  server.py
src/cop_thief/ui/static/: index.html  panel.html
tests/: conftest.py
tests/integration/: test_bonus_series.py  test_game.py  test_mcp_roundtrip.py  test_remote_game.py  test_sanity_progression.py
tests/unit/: test_adaptive_strategy.py  test_agents.py  test_agreement.py  test_architecture.py  test_archive.py  test_bedrock_v11.py  test_belief_strategy.py  test_board_state.py  test_bonus_report.py  test_broadcast.py  test_challenge_runner.py  test_config.py  test_config_manager.py  test_constants.py  test_controller.py  test_domain.py  test_dual_mcp_host.py  test_env_loader.py  test_frames.py  test_gatekeeper.py  test_gmail_reporter.py  test_grid.py  test_homestretch.py  test_inbound_observer.py  test_llm_client.py  test_logger.py  test_match.py  test_mcp_client.py  test_nl.py  test_nl_llm.py  test_node_state.py  test_orchestrator.py  test_qlearning.py  test_qtable.py  test_rate_limiter.py  test_retaliation.py  test_retry.py  test_rules.py  test_scoring.py  test_sdk.py  (+12 more)
