[project]
name = "cop-thief"
version = "1.0.0"
description = "Dual AI Agent Conversation via MCP Servers — Dec-POMDP Cop & Thief Chase"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "All Rights Reserved (course submission)" }
dependencies = []

[project.scripts]
cop-thief = "cop_thief.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cop_thief"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["**/main.py", "tests/*", "**/gui/*"]

[tool.coverage.report]
fail_under = 85
