[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marl-cop-thief"
version = "1.00"
description = "Dual AI Agent Conversation via MCP Servers — Dec-POMDP Cop & Thief Chase"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Team marl-cop-thief" }]
keywords = ["mcp", "dec-pomdp", "multi-agent", "reinforcement-learning", "fastmcp"]

# --- Runtime dependencies (strict semantic-version bounds) ---------------------
# NOTE: We deliberately DO NOT depend on the `openai` or `anthropic` SDKs.
# The API Gatekeeper performs pure, lightweight httpx (sync/async) calls against
# every LLM provider, keeping the dependency tree pristine and provider-agnostic.
dependencies = [
    "fastmcp>=2.0,<3.0",
    "google-api-python-client>=2.100,<3.0",
    "google-auth>=2.30,<3.0",
    "google-auth-oauthlib>=1.2,<2.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "numpy>=1.26,<3.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
gui = ["streamlit>=1.36,<2.0"]

# --- uv: exclusive package & task manager (Guidelines §8.4) --------------------
# uv is the ONLY sanctioned package manager. No pip / virtualenv / python -m.
[tool.uv]
managed = true
package = true

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
cop-thief = "cop_thief.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cop_thief"]

# --- Ruff: zero-violation gate (Guidelines §7.1) ------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
# SubmissionSafetyException is a mandated public API name (kept verbatim per spec).
"src/cop_thief/reporting/guard.py" = ["N818"]

# --- pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=src --cov-report=term-missing --cov-report=xml"
markers = [
    "unit: fast isolated unit tests",
    "integration: cross-component / sanity-stage tests",
]

# --- Coverage: >=85% hard gate (Guidelines §6.2) ------------------------------
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/cop_thief/main.py", "*/tests/*", "src/cop_thief/gui/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
