[project]
name = "cop-thief"
version = "1.0.0"
description = "Dual AI Agent Conversation via MCP Servers — Dec-POMDP Cop & Thief Chase"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "All Rights Reserved (course submission)" }
dependencies = [
    "fastmcp>=3.4.2",
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
]

[project.scripts]
cop-thief = "cop_thief.main:main"
cop-server = "cop_thief.servers.run_server:run_cop"
thief-server = "cop_thief.servers.run_server:run_thief"
cop-thief-match = "cop_thief.run_match:main"
cop-thief-train = "cop_thief.run_train:main"
cop-thief-gui = "cop_thief.gui.app:main"
cop-thief-web = "cop_thief.ui.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cop_thief"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "**/main.py",
    "tests/*",
    "**/gui/*",
    "**/run_server.py",
    "**/run_match.py",
    "**/run_train.py",
    "**/oauth_flow.py",
    "**/ui/server.py",
]

[tool.coverage.report]
fail_under = 95
